# ag-transe-cli

./: .bumpversion.cfg  .gitignore  README.md  build.py  pyoxidizer.bzl.template  pyproject.toml
.github/workflows/: release.yaml
ag_transe_cli/: __init__.py  cli.py  connection.py  export_data.py  import_data.py
